--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Group 1 Elements: Periodic Table Viewer</h1>
+    <h1>Group 1 Elements</h1>
     <iframe src="https://andrewung2009.github.io/group1periodictable/group1-table.html" title="Group 1 Periodic Table"></iframe>
   </div>
 </body>
 </html>
+
