--- a/index.html
+++ b/index.html
@@ -2,47 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Group 1 Periodic Table</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Group 1 Elements</title>
   <style>
     body {
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background: #f0f0f0;
+      background-color: #f8f9fa;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    iframe {
-      border: none;
-      width: 100%;
-      max-width: 1200px;
-      height: 320px; /* Compact but enough to show the entire table */
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 8px;
     }
 
     h1 {
+      font-size: 24px;
       text-align: center;
-      font-size: 1.8rem;
-      margin-top: 1rem;
+      margin: 20px 0 10px 0;
     }
 
-    .container {
+    iframe {
       width: 100%;
-      padding: 20px;
-      max-width: 1250px;
+      max-width: 1200px;
+      height: 480px; /* compact height */
+      border: none;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Group 1 Elements</h1>
-    <iframe src="https://andrewung2009.github.io/group1periodictable/group1-table.html" title="Group 1 Periodic Table"></iframe>
-  </div>
+  <h1>Group 1 Elements</h1>
+  <iframe src="https://andrewung2009.github.io/group1periodictable/group1-table.html" allowfullscreen></iframe>
 </body>
 </html>
-
