--- a/group1-table.html
+++ b/group1-table.html
@@ -166,7 +166,8 @@ Melting Point: 97.8°C
 Boiling Point: 883°C
 Density: 0.968 g/cm³
 Appearance: Soft, silvery-white metal
-Uses: Table salt, soap, streetlights`,
+Uses: Table salt, soap, streetlights
+<iframe src="https://andrewung2009.github.io/group1periodictable/sodium.html" width="100%" height="300" style="border:none; margin-top:10px;"></iframe>`,
 
       'Potassium': `Proton Number: 19
 Relative Atomic Mass: 39.10
